BlogPost: avoid clipping hero image too slim on wide screens

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -322,6 +322,9 @@
 
 .sectionWithHeroImage {
     text-shadow: 0 0 .8rem fade(@yellow, 90);
+    min-height: 30vw;
+    display: flex;
+    align-items: flex-end;
 }
 
 .spaceBetweenBlogAndCTA {
